bug(docs): fix scroll broken on safari #247

--- a/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/src/app/pages/component-sidenav/component-sidenav.scss
@@ -76,6 +76,10 @@ app-component-sidenav {
   }
 }
 
+.mat-drawer-content {
+  position: absolute !important;
+}
+
 .docs-component-sidenav-content {
   min-height: 100%;
   display: flex;
